[project]
name = "site-tomograph"
version = "0.1.0"
description = "3D 網站結構診斷儀 - 視覺化發現死連結、慢速頁面與孤兒節點"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # 使用精確版本鎖定以確保安全性 (H08)
    "aiohttp==3.11.18",
    "beautifulsoup4==4.13.4",
    "fastapi==0.115.7",
    "jinja2==3.1.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.6",
]
